5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4469/executions/1712_2498.log
== SUBMITION (2019-05-08 15:00:04) 
-- CODE:
na = int(input())
nb = int(input())
pa = float(input())
pb = float(input())

cna = 0
cnb = 0
ct = 0

while(cna < cnb):
	cna = cna + ((na + pa) / 100)
	cnb = cnb + ((nb + pb) / 100)
	
	ct = ct + 1
	
print(ct)
-- EXECUTION TIME:
1.13939
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
0
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
0
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:00:08) 
-- CODE:
na = int(input())
nb = int(input())
pa = float(input())
pb = float(input())

cna = 0
cnb = 0
ct = 0

while(cna < cnb):
	cna = cna + ((na + pa) / 100)
	cnb = cnb + ((nb + pb) / 100)
	
	ct = ct + 1
	
print(ct)
-- EXECUTION TIME:
1.29
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
0
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
0
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:00:14) 
-- CODE:
na = int(input())
nb = int(input())
pa = float(input())
pb = float(input())

cna = 0
cnb = 0
ct = 0

while(cna < cnb):
	cna = cna + ((na + pa) / 100)
	cnb = cnb + ((nb + pb) / 100)
	
	ct = ct + 1
	
print(ct)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:01:28) 
-- CODE:
na = int(input())
nb = int(input())
pa = float(input())
pb = float(input())

cna = 0
cnb = 0
ct = 0

while(cna < cnb):
	cna = cna + ((na + pa) / 100)
	cnb = cnb + ((nb + pb) / 100)
	ct = ct + 1
	
print(ct)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:02:18) 
-- CODE:
na = int(input())
nb = int(input())
pa = float(input())
pb = float(input())

cna = 0
cnb = 0
ct = 0

while(cna < cnb):
	cna = cna + ((na + pa) / 100)
	cnb = cnb + ((nb + pb) / 100)
	ct = ct + 1
	
print(ct)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:04:31) 
-- CODE:
na = int(input())
nb = int(input())
pa = float(input())
pb = float(input())

cna = 0
cnb = 0
ct = 0

cna = cna + ((na + pa) / 100)
cnb = cnb + ((nb + pb) / 100)
ct = ct + 1

while(cna < cnb):
	cna = cna + ((na + pa) / 100)
	cnb = cnb + ((nb + pb) / 100)
	ct = ct + 1
	
print(ct)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:08:27) 
-- CODE:
na = int(input())
nb = int(input())
pa = float(input())
pb = float(input())

cna = na + ((na + pa) / 100)
cnb = nb + ((nb + pb) / 100)
ct = 1

while(cna < cnb):
	cna = cna + ((cna + pa) / 100)
	cnb = cnb + ((cnb + pb) / 100)
	ct = ct + 1
	
print(ct)
-- OUTPUT:
70084
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:08:29) 
-- CODE:
na = int(input())
nb = int(input())
pa = float(input())
pb = float(input())

cna = na + ((na + pa) / 100)
cnb = nb + ((nb + pb) / 100)
ct = 1

while(cna < cnb):
	cna = cna + ((cna + pa) / 100)
	cnb = cnb + ((cnb + pb) / 100)
	ct = ct + 1
	
print(ct)
-- EXECUTION TIME:
1.49243
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
70084
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
70117
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
69945
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:11:00) 
-- CODE:
na = int(input())
nb = int(input())
pa = float(input())
pb = float(input())

cna = na + ((na * pa) / 100)
cnb = nb + ((nb * pb) / 100)
ct = 1

while(cna < cnb):
	cna = cna + ((cna * pa) / 100)
	cnb = cnb + ((cnb * pb) / 100)
	ct = ct + 1
	
print(ct)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:11:20) 
-- CODE:
na = int(input())
nb = int(input())
pa = float(input())
pb = float(input())

cna = na + ((na * pa) / 100)
cnb = nb + ((nb * pb) / 100)
ct = 1

while(cna < cnb):
	cna = cna + ((cna * pa) / 100)
	cnb = cnb + ((cnb * pb) / 100)
	ct = ct + 1
	
print(ct)
-- EXECUTION TIME:
0.317892
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:14:01) 
-- CODE:
na = int(input())
nb = int(input())
pa = float(input())
pb = float(input())

cna = 0
cnb = 0
ct = 0

cna = cna + ((na + pa) / 100)
cnb = cnb + ((nb + pb) / 100)
ct = ct + 1

while(cna < cnb):
	cna = cna + ((na + pa) / 100)
	cnb = cnb + ((nb + pb) / 100)
	ct = ct + 1
	
print(ct)
-- EXECUTION TIME:
573.122
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:

-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:

-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:23:51) 
-- CODE:
na = int(input())
nb = int(input())
pa = float(input())
pb = float(input())

cna = na + ((na * pa) / 100)
cnb = nb + ((nb * pb) / 100)
ct = 1

while(cna < cnb):
	cna = cna + ((cna * pa) / 100)
	cnb = cnb + ((cnb * pb) / 100)
	ct = ct + 1
	
print(ct)
-- EXECUTION TIME:
0.192281
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 18:38:23) 
-- CODE:
na = int(input())
nb = int(input())
pa = float(input())
pb = float(input())

while(na < nb):
	na = na + ((na * pa) / 100)
	nb = nb + ((nb * pb) / 100)
	t = t + 12
	
print(t)
-- EXECUTION TIME:
0.165635
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2498/main.py", line 9, in <module>
    t = t + 12
NameError: name 't' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 18:38:32) 
-- CODE:
na = int(input())
nb = int(input())
pa = float(input())
pb = float(input())

while(na < nb):
	na = na + ((na * pa) / 100)
	nb = nb + ((nb * pb) / 100)
	t = t + 1
	
print(t)
-- EXECUTION TIME:
0.1624
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2498/main.py", line 9, in <module>
    t = t + 1
NameError: name 't' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 18:39:22) 
-- CODE:
na = int(input())
nb = int(input())
pa = float(input())
pb = float(input())

t = 0

while(na < nb):
	na = na + ((na * pa) / 100)
	nb = nb + ((nb * pb) / 100)
	t = t + 1
	
print(t)
-- EXECUTION TIME:
0.121513
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
